--- a/ui/styles/letterbox.css
+++ b/ui/styles/letterbox.css
@@ -11,6 +11,7 @@
     text-align: center;
     box-shadow: 0px 3px #ccc;
     transition: box-shadow .1s, transform .1s, background-color .3s;
+    cursor: pointer;
 }
 
 .letterbox:hover {
